.circleci/cloudformation/cluster.yml
Description: Contains network and cluster instance

Parameters:
  EnvironmentName:
    Description: An Environment name that will be prefixed to resources
    Default: capstone-project
    Type: String
  SSHKeyName:
    Description: SSH key for cluster access
    Type: String
  amiImageId:
    Description: Image ID for instance
    Type: String

Resources:
  ClusterNetworkAcl:
    Type: AWS::EC2::NetworkAcl

  ClusterNetworkAclEntryInbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref ClusterNetworkAcl
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 8000
        To: 8000

  ClusterNetworkAclEntryOutbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref ClusterNetworkAcl
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 8000
        To: 8000

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${EnvironmentName}-cluster-SG
      GroupDescription: Allow port 22, 80 and 8000
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          CidrIp: 0.0.0.0/0

  KubernetesEC2Cluster:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.small
      SecurityGroups:
        - Ref: InstanceSecurityGroup
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet:
            - !Ref InstanceSecurityGroup
          NetworkAclId: !Ref ClusterNetworkAcl
      KeyName: !Ref SSHKeyName
      ImageId: !Ref amiImageId
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: '30'
            VolumeType: gp2
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-cluster
        - Key: Project
          Value: !Ref EnvironmentName
